# AgentTrade

./: .gitignore  .pytest.ini  README.md  Untitled.ipynb  app.py  concat_datasets.py  config.py  docker-compose.yml  main.py  main_parser.py  main_web.py  pyproject.toml  requirements.txt  start_parser.py  test.py  train_news.py  xpath_rec.json
App_kucoin/: api.py
App_trade/: Agent.py  NN_GeneratorDataset.py  NN_dataset.py  NN_model.py  NN_news.py  __init__.py  exhange.py  tests.py
App_web/: Thread.py  __init__.py  agent_views.py  handler.py  login.py  models.py  parser_coins.py  registration.py  views.py
App_web/App_kucoin/: __init__.py  api.py
App_web/App_trade/: Agent.py  Api.py  Handler.py  NN_dataset.py  NN_model.py  __init__.py  clear_datasets.py  exhange.py  tests.py
App_web/Parser/: Api.py  Device.py  __init__.py  datetime_process.py  parser_bcs.py  parser_kucoin.py  parser_marketcap.py  parser_news.py  settings_news.py
App_web/templates/: agent_page.html  user_page.html
Parser/: Api.py  __init__.py  datetime_process.py
Statistics/: Stat.py  __init__.py
Test/BacktraderTest/: test.py
app_fastapi/: __init__.py
app_fastapi/configuration/: dependencies.py  lifespan.py  (+1 more)
apps/: __init__.py
bot/: bot.py
core/: main_parser.py  main_simulation.py  requirements.txt
data/: coin_list.csv
datasets_coins/: coins.csv
datasets_news/: 2024-10-24_news.csv  domains.csv  domains_not_open.csv  ensemble_lstm_preds_crypto_news_api.csv
datasets_parser/: XMR_1D.csv  XMR_1H.csv  XMR_4H.csv  XMR_5m.csv
tests/: test.py  test_settings.py  train_news.py
(+101 files in other folders)
