[tool.poetry]
package-mode = false

[project]
name = "AgentTrade"
version = "1.0.0"
description = "Automated Trade Agent (ATA)"
authors = [
    {name = "igornet0"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.11.0,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
